<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".Activity.AddNewAgendaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            style="@style/TextDefaultStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:lineSpacingMultiplier="0.8"
            android:text="@string/add_new_agenda_text"
            android:textAlignment="center"
            android:textSize="26sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/agenda_title_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_agenda_title"
                style="@style/TextDefaultStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/start_date_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_start_date"
                style="@style/TextDefaultStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/start_time_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_start_time"
                style="@style/TextDefaultStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/end_date_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_end_date"
                style="@style/TextDefaultStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/end_time_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_end_time"
                style="@style/TextDefaultStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/location_text"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_location"
                    style="@style/TextDefaultStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_get_location"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="3dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/ic_location_on_black_24dp"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btn_add_agenda"
            style="@style/RoundedButtonColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_this_agenda" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        android:background="#CC000000"
        android:visibility="gone"
        android:clickable="true">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_fileName="890-loading-animation.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>