<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ShareActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <TextView
        style="@style/TextTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_this_code_and_npassword"
        android:textAlignment="center"
        android:textSize="26sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/ic_share_illustration"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            style="@style/TextDefaultStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_code"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            style="@style/TextDefaultStyle"
            android:id="@+id/tv_group_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <TextView
            style="@style/TextDefaultStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_password"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            style="@style/TextDefaultStyle"
            android:id="@+id/tv_group_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>