<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Fragment.InsertPasswordFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextDefaultStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:textSize="24sp"
                android:textAlignment="center"
                android:text="@string/yey_the_code_is_valid_next_step_is_enter_the_password"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <TextView
                style="@style/TextDefaultStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_name"/>

            <TextView
                style="@style/TextDefaultStyle"
                android:id="@+id/tv_group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:textSize="20sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <EditText
                android:id="@+id/et_group_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <Button
                android:id="@+id/btn_lets_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RoundedButtonColorPrimary"
                android:text="@string/let_s_go"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        android:background="#CC000000"
        android:visibility="gone"
        android:elevation="5dp"
        android:clickable="true">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_fileName="890-loading-animation.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true" />
    </LinearLayout>
</FrameLayout>