<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="200dp"
           android:padding="20dp"
           android:gravity="center_vertical">

           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:orientation="vertical">

               <TextView
                   style="@style/TextDefaultStyle"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/welcome_back"/>

               <TextView
                   style="@style/TextDefaultStyle"
                   android:id="@+id/tv_user_name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/open_sans_bold"
                   android:textSize="24sp"/>

           </LinearLayout>

           <de.hdodenhof.circleimageview.CircleImageView
               android:id="@+id/iv_user_photo"
               android:layout_width="100dp"
               android:layout_height="100dp"/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@color/colorPrimary"
           android:orientation="vertical"
           android:padding="20dp">

           <Space
               android:layout_width="match_parent"
               android:layout_height="24dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/open_sans_bold"
               android:textSize="28sp"
               android:textColor="@android:color/white"
               android:lineSpacingMultiplier="0.9"
               android:text="@string/let_s_join_or_ncreate_new_group"/>

           <Space
               android:layout_width="match_parent"
               android:layout_height="40dp"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center">

               <androidx.cardview.widget.CardView
                   android:id="@+id/cv_join_group"
                   android:layout_width="0dp"
                   android:layout_height="250dp"
                   android:layout_weight="1"
                   android:foreground="?android:attr/selectableItemBackground"
                   android:clickable="true"
                   app:cardCornerRadius="20dp">

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:orientation="vertical">

                       <Space
                           android:layout_width="match_parent"
                           android:layout_height="50dp"/>

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="100dp"
                           android:src="@drawable/ic_join_group_illustration"/>

                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_margin="20dp"
                           android:fontFamily="@font/open_sans_bold"
                           android:textSize="18sp"
                           android:textColor="@color/colorPrimary"
                           android:textAlignment="center"
                           android:text="@string/join_a_group" />
                   </LinearLayout>
               </androidx.cardview.widget.CardView>

               <Space
                   android:layout_width="16dp"
                   android:layout_height="match_parent"/>

               <androidx.cardview.widget.CardView
                   android:id="@+id/cv_create_group"
                   android:layout_width="0dp"
                   android:layout_height="250dp"
                   android:layout_weight="1"
                   android:foreground="?android:attr/selectableItemBackground"
                   android:clickable="true"
                   app:cardCornerRadius="20dp">

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:orientation="vertical">

                       <Space
                           android:layout_width="match_parent"
                           android:layout_height="50dp"/>

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="100dp"
                           android:src="@drawable/ic_create_group_illustration"/>

                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_margin="20dp"
                           android:fontFamily="@font/open_sans_bold"
                           android:textSize="18sp"
                           android:textColor="@color/colorPrimary"
                           android:textAlignment="center"
                           android:lineSpacingMultiplier="0.85"
                           android:text="@string/create_new_group"/>
                   </LinearLayout>
               </androidx.cardview.widget.CardView>
           </LinearLayout>
       </LinearLayout>
   </LinearLayout>
</FrameLayout>